# backend/src/main/java/ru/naminutu/backend/api/GuestBookingsController.java
@@ -5,6 +5,7 @@ import org.springframework.web.bind.annotation.RestController;
 import ru.naminutu.backend.generated.api.GuestBookingsApi;
 import ru.naminutu.backend.generated.model.BookingDto;
 import ru.naminutu.backend.generated.model.CreateBookingRequestDto;
+import ru.naminutu.backend.generated.model.EventBookingPageDto;
 import ru.naminutu.backend.generated.model.TimeSlotListDto;
 import ru.naminutu.backend.service.GuestBookingService;
 
@@ -14,6 +15,11 @@ public class GuestBookingsController implements GuestBookingsApi {
 
 	public GuestBookingsController(GuestBookingService guestBookingService) {
 		this.guestBookingService = guestBookingService;
+	}
+
+	@Override
+	public ResponseEntity<EventBookingPageDto> guestBookingsReadBookingPage(String userSlug, String eventSlug) {
+		return ApiResponseMapper.ok(guestBookingService.readBookingPage(userSlug, eventSlug));
 	}
 
 	@Override
